css style correction

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <button class="addNewTask__button js-button">Dodaj zadanie</button>
   </form>
   <h3 class="tasksList">Lista zadań</h3>
-  <ul class="tasksList__toDo js-tasks"></ul>
+  <ul class="tasksList__items js-tasks"></ul>
 </body>
 
 </html>
