--- a/index.html
+++ b/index.html
@@ -21,15 +21,25 @@
   <script defer src="js/script.js"></script>
 </head>
 
-<body>
-  <h1 class="taskHeader">Lista zadań</h1>
-  <h2 class="addNewTask">Dodaj nowe zadanie</h2>
-  <form class="addNewTask__form js-form">
-    <input class="addNewTask__create js-newTask" placeholder="Co jest do zrobienia?" autofocus>
-    <button class="addNewTask__button js-button">Dodaj zadanie</button>
-  </form>
-  <h3 class="tasksList">Lista zadań</h3>
-  <ul class="tasksList__item js-tasks"></ul>
+<body class="body">
+  <header>
+    <h1>Lista zadań</h1>
+  </header>
+  <section class="section">
+    <h2 class="section__header">Dodaj nowe zadanie</h2>
+    <div class="section__body">
+      <form class="addNewTask__form js-form">
+        <input class="addNewTask__create js-newTask" placeholder="Co jest do zrobienia?" autofocus>
+        <button class="addNewTask__button js-button">Dodaj zadanie</button>
+      </form>
+    </div>
+  </section>
+  <section class="section">
+    <h2 class="section__header">Lista zadań</h2>
+    <div class="section__body">      
+      <ul class="tasksList js-tasks"></ul>
+    </div>
+  </section>
 </body>
 
 </html>
