adding buttons and minor changes

--- a/index.html
+++ b/index.html
@@ -37,10 +37,7 @@
   <section class="section">
     <div class="section__listTasks">
       <h2 class="section__headerListTasks">Lista zadań</h2>
-      <div class="sections__buttons js-buttons">
-        <button class="buttons">pokaż/ukryj ukończone</button>
-        <button class="buttons">ukończ wszystkie</button>
-      </div>
+      <ul class="sections__buttons js-buttons"></ul>
     </div>
     <div class="section__addTask">
       <ul class="tasksList js-tasks"></ul>
