--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body class="body">
   <header>
-    <h1>Lista zadań</h1>
+    <h1 class="taskTitle">Lista zadań</h1>
   </header>
   <section class="section">
     <h2 class="section__header">Dodaj nowe zadanie</h2>
