correction CSS – Media queries

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
   <link href="css/media.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap"
+    rel="stylesheet">
   <script defer src="js/script.js"></script>
 </head>
 
@@ -37,7 +39,7 @@
   <section class="section">
     <div class="section__listTasks">
       <h2 class="section__headerListTasks">Lista zadań</h2>
-      <ul class="sections__buttons js-buttons"></ul>
+      <ul class="section__buttons js-buttons"></ul>
     </div>
     <div class="section__addTask">
       <ul class="tasksList js-tasks"></ul>
